force-app/main/default/objects/Store_for_IA_Account__c/Store_for_IA_Account__c.object-meta.xml
<CustomObject>
    <description>Used to identify Stores affiliated with a given IA Account.</description>
    <label>Store for IA Account</label>
    <nameField>
        <displayFormat>SFIA-{0000000}</displayFormat>
        <label>SFIA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores for IA Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>