force-app/main/default/objects/Store_for_IA_Account__c/fields/IA_Account__c.field-meta.xml
<CustomField>
    <fullName>IA_Account__c</fullName>
    <label>IA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stores for IA Account</relationshipLabel>
    <relationshipName>Stores_for_IA_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>