force-app/main/default/objects/Store_for_IA_Account__c/fields/IA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Number__c</fullName>
    <formula>IA_Account__r.AccountNumber</formula>
    <label>IA Account Number</label>
    <type>Text</type>
</CustomField>