force-app/main/default/objects/Store_for_IA_Account__c/fields/IA_RWS_Id__c.field-meta.xml
<CustomField>
    <fullName>IA_RWS_Id__c</fullName>
    <formula>IA_Account__r.RWS_ID__c</formula>
    <label>IA RWS Id</label>
    <type>Text</type>
</CustomField>