force-app/main/default/objects/Store_for_IA_Account__c/fields/Participating_Store_Combo__c.field-meta.xml
<CustomField>
    <fullName>Participating_Store_Combo__c</fullName>
    <description>Combination of IA Account ID (SF Account ID) + Store Account ID (RWS ID).</description>
    <externalId>true</externalId>
    <label>Participating Store Combo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>