force-app/main/default/objects/Store_for_IA_Account__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IA Accounts for Store</relationshipLabel>
    <relationshipName>IA_Accounts_for_Store</relationshipName>
    <type>Lookup</type>
</CustomField>