force-app/main/default/objects/Store_for_IA_Account__c/fields/Store_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Account_Number__c</fullName>
    <formula>Store_Account__r.AccountNumber</formula>
    <label>Store Account Number</label>
    <type>Text</type>
</CustomField>