force-app/main/default/objects/Store_for_IA_Account__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <formula>Store_Account__r.Store_Number__c</formula>
    <label>Store Number</label>
    <type>Text</type>
</CustomField>