force-app/main/default/objects/Store_for_IA_Account__c/fields/Store_RWS_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_RWS_Id__c</fullName>
    <formula>Store_Account__r.RWS_ID__c</formula>
    <label>Store RWS Id</label>
    <type>Text</type>
</CustomField>